--- a/clients.html
+++ b/clients.html
@@ -63,6 +63,10 @@
     <a href="#">הגדרות</a>
   </nav>
   <div class="container">
+<label>
+  🔎 חיפוש:
+  <input type="text" id="searchInput" placeholder="הקלד שם, טלפון או כל מילה...">
+</label>
     <table id="clientsTable">
       <thead>
         <tr>
@@ -105,6 +109,16 @@
             row.appendChild(td);
           });
           tbody.appendChild(row);
+// חיפוש וסינון טבלה
+document.getElementById("searchInput").addEventListener("input", function () {
+  const filter = this.value.toLowerCase();
+  const rows = document.querySelectorAll("#clientsTable tbody tr");
+  rows.forEach(row => {
+    const text = row.textContent.toLowerCase();
+    row.style.display = text.includes(filter) ? "" : "none";
+  });
+});
+
         });
       })
       .catch(error => {
