--- a/clients.html
+++ b/clients.html
@@ -65,7 +65,7 @@
   <div class="container">
 <label>
   🔎 חיפוש:
-  <input type="text" id="searchInput" placeholder="הקלד שם, טלפון או כל מילה...">
+  <input type="text" id="searchInput" placeholder="חיפוש לפי שם חברה, פרטי, מגזר, מזין, תאריך..." />
 </label>
     <table id="clientsTable">
       <thead>
