--- a/clients.html
+++ b/clients.html
@@ -135,6 +135,17 @@ document.getElementById("searchInput").addEventListener("input", function () {
     row.style.display = text.includes(filter) ? "" : "none";
   });
 });
+<script>
+  document.getElementById("searchInput").addEventListener("keyup", function () {
+    const filter = this.value.toLowerCase();
+    const rows = document.querySelectorAll("#clientsTable tbody tr");
+
+    rows.forEach(row => {
+      const text = row.innerText.toLowerCase();
+      row.style.display = text.includes(filter) ? "" : "none";
+    });
+  });
+</script>
 
 </body>
 </html>
