--- a/form.html
+++ b/form.html
@@ -2,175 +2,125 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>הוספת לקוח חדש</title>
-  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>טופס לקוחות - פרומיקסט</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
   <style>
     body {
-      font-family: 'Heebo', sans-serif;
       background-color: #f0f8ff;
-      margin: 0;
-      padding: 0;
-      direction: rtl;
+      font-family: Arial, sans-serif;
     }
-
-    header {
+    .logo {
+      width: 160px;
+    }
+    .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #004e64;
-      color: white;
-      padding: 20px;
+      padding: 1rem;
     }
-
-    header img {
-      height: 60px;
+    .container-split {
+      display: flex;
+      gap: 2rem;
+      padding: 2rem;
     }
-
-    header h1 {
-      margin: 0;
-      font-size: 24px;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 30px auto;
+    .form-section {
+      flex: 1;
       background-color: #ffffff;
-      padding: 25px 30px;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
-      border-radius: 12px;
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 30px;
-      color: #004e64;
-    }
-
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-    }
-
-    input, select, textarea {
-      width: 100%;
-      padding: 8px;
-      margin-top: 6px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      box-sizing: border-box;
-    }
-
-    button {
-      background-color: #007c91;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      margin-top: 25px;
-      font-size: 16px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #005f6b;
-    }
-
-    .success-message {
-      color: green;
-      margin-top: 15px;
-    }
-
-    .error-message {
-      color: red;
-      margin-top: 15px;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>הוספת לקוח חדש</h1>
-    <img src="promixed-new-logo_2022A.png" alt="Promixed Logo">
-  </header>
+  <div class="header">
+    <img src="promixed-new-logo_2022A.png" alt="Promixed Logo" class="logo">
+    <h2>טופס לקוחות</h2>
+  </div>
 
-  <div class="container">
-    <h2>טופס הזנת לקוח</h2>
-    <form id="clientForm">
-      <label>שם חברה:</label>
-      <input type="text" name="company_name" required>
+  <div class="container-split">
+    <!-- טופס לקוחות -->
+    <div class="form-section">
+      <form id="clientForm">
+        <div class="mb-3">
+          <label class="form-label">שם חברה *</label>
+          <input type="text" class="form-control" name="company_name" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">שם פרטי *</label>
+          <input type="text" class="form-control" name="first_name" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">שם משפחה *</label>
+          <input type="text" class="form-control" name="last_name" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">טלפון לקוח *</label>
+          <input type="tel" class="form-control" name="client_phone" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">טלפון איש קשר</label>
+          <input type="tel" class="form-control" name="contact_phone">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">אימייל *</label>
+          <input type="email" class="form-control" name="email" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">מגזר *</label>
+          <select class="form-select" name="sector" required>
+            <option value="">בחר מגזר</option>
+            <option>חינוך</option>
+            <option>צה"ל</option>
+            <option>בריאות</option>
+            <option>תחבורה</option>
+            <option>משרד ממשלתי</option>
+            <option>חברה פרטית</option>
+            <option>אחר</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">הגיע דרך *</label>
+          <select class="form-select" name="source" required>
+            <option value="">בחר מקור</option>
+            <option>טלפון</option>
+            <option>המלצה</option>
+            <option>כנס</option>
+            <option>אתר</option>
+            <option>פייסבוק</option>
+            <option>אינסטגרם</option>
+            <option>אחר</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">הערות</label>
+          <textarea class="form-control" name="notes" rows="2"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">שמור</button>
+      </form>
+    </div>
 
-      <label>שם פרטי:</label>
-      <input type="text" name="first_name" required>
-
-      <label>שם משפחה:</label>
-      <input type="text" name="last_name">
-
-      <label>ת.ז / ח.פ:</label>
-      <input type="text" name="id_number">
-
-      <label>טלפון לקוח:</label>
-      <input type="text" name="phone">
-
-      <label>טלפון איש קשר:</label>
-      <input type="text" name="contact_phone">
-
-      <label>אימייל:</label>
-      <input type="email" name="email">
-
-      <label>מגזר:</label>
-      <input type="text" name="sector">
-
-      <label>הגיע דרך:</label>
-      <input type="text" name="source">
-
-      <label>שם מזין:</label>
-      <input type="text" name="entered_by">
-
-      <label>הערות:</label>
-      <textarea name="notes"></textarea>
-
-      <label>תאריך:</label>
-      <input type="date" name="created_at">
-
-      <label>סטטוס:</label>
-      <input type="text" name="status">
-
-      <label>סוג:</label>
-      <input type="text" name="type">
-
-      <button type="submit">שמור לקוח</button>
-      <div class="success-message" id="successMsg"></div>
-      <div class="error-message" id="errorMsg"></div>
-    </form>
+    <!-- מקום להזדמנות (בהמשך) -->
+    <div class="form-section text-center text-muted">
+      <p>כאן יופיע טופס הזדמנות</p>
+    </div>
   </div>
 
   <script>
-    const form = document.getElementById('clientForm');
-    const successMsg = document.getElementById('successMsg');
-    const errorMsg = document.getElementById('errorMsg');
-
-    form.addEventListener('submit', async (e) => {
+    document.getElementById('clientForm').addEventListener('submit', function(e) {
       e.preventDefault();
-      successMsg.textContent = '';
-      errorMsg.textContent = '';
-
-      const formData = new FormData(form);
-      const data = {};
-      formData.forEach((value, key) => data[key] = value);
-
-      try {
-        const res = await fetch('https://promixed-crm-api.onrender.com/clients', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
-        });
-
-        if (!res.ok) throw new Error('תקלה בשליחה');
-        successMsg.textContent = '✅ הלקוח נוסף בהצלחה';
-        form.reset();
-      } catch (err) {
-        errorMsg.textContent = '❌ שגיאה בשליחה: ' + err.message;
-      }
+      const formData = new FormData(e.target);
+      const data = Object.fromEntries(formData);
+      data.created_at = new Date().toISOString();
+      fetch("https://promixed-crm-api.onrender.com/add-client", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(data)
+      })
+      .then(res => res.json())
+      .then(res => alert("נשמר בהצלחה!"))
+      .catch(err => alert("שגיאה בשמירה"));
     });
   </script>
 </body>
